# autosoaring

./: .gitignore  CMakeLists.txt  README.md  README_OPENSOURCE.md  package.xml  requirements.txt  setup_autosoaring.sh  start_autosoaring.sh  test_paths.py
src/autosoaring_pkg/: package.xml  setup.cfg  setup.py
src/autosoaring_pkg/GZ_Msgs/: CMakeLists.txt  README.md  steps.txt
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/group_thermals_msg/: README.me
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/group_thermals_msg/cpp_subscriber/: CMakeLists.txt  subscriber_thermal_group.cc
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/group_thermals_msg/py_publisher/: py_publisher.py
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/one_thermal_msg/: README.me
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/one_thermal_msg/cpp_subscriber/: CMakeLists.txt  subscriber.cc
src/autosoaring_pkg/GZ_Msgs/examples/python_pub.cpp_sub/one_thermal_msg/py_publisher/: publisher.py
src/autosoaring_pkg/GZ_Msgs/gz/msgs/: thermal.proto
src/autosoaring_pkg/GZ_Msgs/python/: thermal_msg_pb2.py
src/autosoaring_pkg/autosoaring_pkg/: battery_manager_node.py  thermal_detection_node.py  thermal_generator_node.py  thermal_mapping_node.py  thermal_msg_pb2.py  thermal_pb2.py
src/autosoaring_pkg/config/: area2.plan  area3.plan  thermal_config.yaml
src/autosoaring_pkg/launch/: autosoaring_launch.py
